Gradle: convert mmstudio to java-library; use separate application
The project package/java now aggregates all jars.

This arrangement enforces plugin dependencies (including
inter-dependencies) at build time, so there is no longer much point in
separating plugins from libraries. We can simplify things by placing
all plugins on the classpath.